--- a/main-app/package.json
+++ b/main-app/package.json
@@ -68,6 +68,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "antd": "^4.13.1",
+    "qiankun": "^2.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
