--- a/main-app/package.json
+++ b/main-app/package.json
@@ -58,10 +58,10 @@
     "terser-webpack-plugin": "^4.2.0",
     "typescript": "^4.1.5",
     "url-loader": "^4.1.1",
-    "webpack": "^4.46.0",
+    "webpack": "^5.38.1",
     "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "4.0.0-beta.2",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
