--- a/micro-app-react/package.json
+++ b/micro-app-react/package.json
@@ -60,10 +60,10 @@
     "terser-webpack-plugin": "^4.2.0",
     "typescript": "4.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.24.4",
+    "webpack": "^5.38.1",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^4.0.0-beta.0",
+    "webpack-dev-server": "4.0.0-beta.2",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
