--- a/micro-app-vue/package.json
+++ b/micro-app-vue/package.json
@@ -61,10 +61,10 @@
     "typescript": "4.1",
     "url-loader": "^4.1.1",
     "vue-loader": "^16.1.2",
-    "webpack": "^5.24.4",
+    "webpack": "^5.38.1",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^4.0.0-beta.0",
+    "webpack-dev-server": "4.0.0-beta.2",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
